[VRC:Deobf] Fix Cpp2Il working dir